# docs/swagger.json
@@ -97,6 +97,57 @@
                         }
                     }
                 }
+            },
+            "put": {
+                "description": "Updates and returns a single book whose ISBN value matches the isbn. New data must be passed in the body.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "books"
+                ],
+                "summary": "Update single book by isbn",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "update book by isbn",
+                        "name": "isbn",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Book"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a single entry from the database based on isbn.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "books"
+                ],
+                "summary": "Remove single book by isbn",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "delete book by isbn",
+                        "name": "isbn",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": ""
+                    }
+                }
             }
         }
     },
