# routes/routes.go
@@ -10,13 +10,12 @@ func SetupRouter() *gin.Engine {
 
 	v1 := router.Group("/api/v1")
 	{
+		v1.POST("/books", handlers.PostBook)
 		v1.GET("/books", handlers.GetBooks)
 		v1.GET("/books/:isbn", handlers.GetBookByISBN)
-		// router.DELETE("/books/:isbn", handlers.DeleteBookByISBN)
-		// router.PUT("/books/:isbn", handlers.UpdateBookByISBN)
-		v1.POST("/books", handlers.PostBook)
+		v1.DELETE("/books/:isbn", handlers.DeleteBookByISBN)
+		v1.PUT("/books/:isbn", handlers.UpdateBookByISBN)
 	}
-
 
 	return router
 }
